--- a/ProjectUAS_EzBooking_Client/src/administrator/FormListReservation.form
+++ b/ProjectUAS_EzBooking_Client/src/administrator/FormListReservation.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -92,8 +92,8 @@
               <Table columnCount="7" rowCount="4">
                 <Column editable="true" title="ID" type="java.lang.Object"/>
                 <Column editable="true" title="Booking&apos;s Date" type="java.lang.Object"/>
-                <Column editable="true" title="Number of Peoples" type="java.lang.Object"/>
-                <Column editable="true" title="Number of Tables" type="java.lang.Object"/>
+                <Column editable="true" title="Number of People(s)" type="java.lang.Object"/>
+                <Column editable="true" title="Number of Table(s)" type="java.lang.Object"/>
                 <Column editable="true" title="Costumer&apos;s Name" type="java.lang.Object"/>
                 <Column editable="true" title="Restaurant&apos;s Name" type="java.lang.Object"/>
                 <Column editable="true" title="Total Price" type="java.lang.Object"/>
@@ -151,7 +151,6 @@
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="UPDATE RESERVATION"/>
-        <Property name="actionCommand" type="java.lang.String" value="UPDATE RESERVATION"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
