--- a/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
+++ b/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
@@ -130,6 +130,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="LOGIN"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
