tambah baca data menu dan restoran

--- a/ProjectUAS_EzBooking_Client/src/MainForm/FormDashboard.form
+++ b/ProjectUAS_EzBooking_Client/src/MainForm/FormDashboard.form
@@ -112,6 +112,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Customer"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCustomerActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnRestaurant">
           <Properties>
@@ -151,6 +154,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Admin"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAdminActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
