--- a/ProjectUAS_EzBooking_Client/src/Restaurant/FormAddMenu.form
+++ b/ProjectUAS_EzBooking_Client/src/Restaurant/FormAddMenu.form
@@ -133,6 +133,9 @@
         <Property name="text" type="java.lang.String" value="ADD"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtPriceTotal">
       <Properties>
@@ -165,6 +168,9 @@
         <Property name="text" type="java.lang.String" value="CANCEL"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
