--- a/ProjectUAS_EzBooking_Client/src/Customer/FormReservation.form
+++ b/ProjectUAS_EzBooking_Client/src/Customer/FormReservation.form
@@ -170,6 +170,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="FOODS ORDER"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnFoodOrderActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnBook">
       <Properties>
@@ -178,6 +181,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="BOOKING"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBookActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
