Update CRUD Admin

--- a/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
+++ b/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
@@ -49,7 +49,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="btnRestaurant" alignment="0" max="32767" attributes="0"/>
-              <Component id="btnExit" alignment="0" max="32767" attributes="0"/>
+              <Component id="btnLogOut" alignment="0" max="32767" attributes="0"/>
               <Component id="btnCustomer" alignment="0" max="32767" attributes="0"/>
               <Component id="btnAdministrator" alignment="0" pref="162" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
@@ -71,7 +71,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnAdministrator" min="-2" pref="57" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnExit" pref="38" max="32767" attributes="0"/>
+                  <Component id="btnLogOut" pref="38" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -94,7 +94,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRestaurantActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="btnExit">
+        <Component class="javax.swing.JButton" name="btnLogOut">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="0" red="cc" type="rgb"/>
@@ -105,8 +105,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="EXIT"/>
+            <Property name="text" type="java.lang.String" value="LOG OUT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLogOutActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnCustomer">
           <Properties>
